[gd_scene format=3 uid="uid://cxcvxaf1qdojv"]

[ext_resource type="Script" uid="uid://c8h6sc8l7etgm" path="res://dialogs/story_overlay.gd" id="1_yd1ok"]
[ext_resource type="FontFile" uid="uid://chuit354v2gmb" path="res://design/fonts/Skranji-Bold.ttf" id="2_nj4i4"]
[ext_resource type="Theme" uid="uid://p58o4y2jdivt" path="res://ui/theme.tres" id="2_v3mv3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0ir1"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.21, 0.15959999, 0.15959999, 1)

[node name="StoryOverlay" type="Control" unique_id=1931304760]
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yd1ok")
metadata/_edit_lock_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="." unique_id=2132047080]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1102.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.3529412)

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=1719197438]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -707.0
offset_top = 125.0
offset_right = -93.0
offset_bottom = 975.0
grow_horizontal = 0
mouse_filter = 1
theme = ExtResource("2_v3mv3")
theme_override_font_sizes/normal_font_size = 42
theme_override_font_sizes/bold_font_size = 42
theme_override_font_sizes/bold_italics_font_size = 42
theme_override_font_sizes/italics_font_size = 42
theme_override_font_sizes/mono_font_size = 42
text = "Hello driver.

On your way to the castle, aren't you?

Are you ready to save a lost soul?"
visible_characters_behavior = 1

[node name="TextRevealTimer" type="Timer" parent="." unique_id=1327137364]
wait_time = 0.05
one_shot = true

[node name="Buttons" type="VBoxContainer" parent="." unique_id=578794042]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -621.0
offset_top = -390.0
offset_right = -89.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Option1" type="Button" parent="Buttons" unique_id=1422854197]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nj4i4")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_j0ir1")
text = "Tell me more."

[node name="Option2" type="Button" parent="Buttons" unique_id=1033281838]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nj4i4")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_j0ir1")
text = "Tell me more."

[node name="Option3" type="Button" parent="Buttons" unique_id=402374024]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nj4i4")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_j0ir1")
text = "Tell me more."

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="TextRevealTimer" to="." method="_on_text_reveal_timer_timeout"]
[connection signal="pressed" from="Buttons/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Buttons/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Buttons/Option3" to="." method="_on_option_3_pressed"]
